--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <div class="service-back">
             <h1 class="service-back-heading">HTML <img src="./image/html5-fill.png" alt="HTML">& CSS <img src="../../image/css3-fill.png" alt=""></h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
+            <p class="service-back-desc">Front End Dev conception de site web</p>
           </div>
         </div>
       </div>
@@ -85,8 +85,8 @@
             <h1 class="service-front-heading">PHP</h1>
           </div>
           <div class="service-back">
-            <h1 class="service-back-heading">Front End Dev</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
+            <h1 class="service-back-heading">Front/Back End Dev</h1>
+            <p class="service-back-desc">Projet dynamique avec gestion de BDD avec MySql</p>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
           </div>
           <div class="service-back">
             <h1 class="service-back-heading">Orienté Objet</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
+            <p class="service-back-desc">Utilisation de C; C++ ; C# avec .NET framework</p>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
           </div>
           <div class="service-back">
             <h1 class="service-back-heading">Rapport</h1>
-            <p class="service-back-desc">Expérience en entreprise et projet</p>
+            <p class="service-back-desc">Expérience en entreprise et projet en formation</p>
           </div>
         </div>
       </div>
