--- a/E4.html
+++ b/E4.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/projet.css">
 </head>
 <body>
   <!-- nav-bar  -->
-  <section id="nav-bar" class="container">
+  <section id="nav-bar" class="container" style="display: flex; flex-direction: row;">
     <header class="nav-bar">
       <div class="brand"><a href="index.html"><h1>Portfolio</h1></a></div>
       <div class="nav-list">
@@ -31,93 +32,31 @@
   </section>
   <!-- End nav-bar  -->
 
-  <!-- Hero Section  -->
-  <section id="hero" class="hero container">
-    <div class="hero-info">
-      <h1 class="hero-info-heading">Je suis<br>KASSA Jokast </h1>
-      <p class="hero-info-subheading">Développeur Web</p>
-      <a href="#" type="button" class="hero-info-button">Portfolio</a>
-    </div>
-    <div class="hero-img">
-      <img src="../../image/IMG_2353.PNG" alt="">
-    </div>
-  </section>
-  <!-- End Hero Section  -->
 
-  <!-- About section  -->
-  <section id="about" class="about container">
-    <div class="about-info">
-      <h1 class="about-info-heading">A PROPOS</h1>
-      <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam, nostrum tempore quos corrupti rem.</p>
-      <a href="../../image/CV/Jokast_Kassa_CV W16 (1)_page-0001.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
-    </div>
-    <div class="about-img">
-      <div class="about-img-wrapper">
-        <img src="./images/img-2.jpg" alt="">
-      </div>
-    </div>
-  </section>
-  <!-- End About section  -->
+  <ul class="card-list">
+	
+  <li class="card">
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/Réalisation1GM.png);" data-image-full="https://drive.google.com/file/d/1BxSCw6EJRAsshFyyIKNaS9NhxymhT93c/view?usp=share_link">
+			<img src="./image/Réalisation1GM.png" alt="Projet 1E5" />
+		</a>
+		<a class="card-description" href="https://drive.google.com/file/d/1BxSCw6EJRAsshFyyIKNaS9NhxymhT93c/view?usp=share_link" target="_blank">
+			<h2>Guest Hotel</h2>
+			<p>Réalisation 1</p>
+		</a>
+	</li>
+	
+	<li class="card">
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/GM1.png);" data-image-full="https://drive.google.com/file/d/1Tese7eZGLOWS1PENe8NFqODnuTt-qQIh/view?usp=share_link">
+			<img src="./image/GM1.png" alt="Projet 2E5" />
+		</a>
+		<a class="card-description" href="https://drive.google.com/file/d/1Tese7eZGLOWS1PENe8NFqODnuTt-qQIh/view?usp=share_link" target="_blank">
+			<h2>Gestion Matos</h2>
+			<p>Réalisation 2</p>
+		</a>
+	</li>
 
+</ul>
   <!-- Service Section  -->
-  <section id="services" class="services container">
-    <div class="services-header">
-      <h1 class="services-header-heading">Compétences</h1>
-      <p class="services-header-desc">Mes différentes compétences sont les suivantes</p>
-    </div>
-    <div class="services-info">
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-palette"></i>
-            <h1 class="service-front-heading">HTML et CSS</h1>
-          </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">HTML <img src="../../image/html5-fill.png" alt="HTML">& CSS <img src="../../image/css3-fill.png" alt=""></h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
-          </div>
-        </div>
-      </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-laptop-code"></i>
-            <h1 class="service-front-heading">PHP</h1>
-          </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Front End Dev</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
-          </div>
-        </div>
-      </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-laptop-code"></i>
-            <h1 class="service-front-heading">PHP</h1>
-          </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Front End Dev</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
-          </div>
-        </div>
-      </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
-            <i class="fa fa-building"></i>
-            <h1 class="service-front-heading">Branding</h1>
-          </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">Branding</h1>
-            <p class="service-back-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aut dolor voluptatem incidunt placeat impedit laboriosam quam consequatur quasi nihil libero ad, quaerat, alias illum excepturi. Iste quo repellendus consequuntur asperiores dignissimos, quaerat obcaecati officiis repudiandae fugit tenetur nulla impedit!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Service Section  -->
-
   <!-- Hire Section  -->
   <section id="hire" class="hire container">
     <h1 class="hire-heading">Tout est possible</h1>
@@ -135,14 +74,16 @@
     <div class="footer-social-follow">
       <h1 class="footer-social-follow-heading">Follow Me</h1>
       <div class="footer-social-icon">
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/jokast.kassa.5/"><i class="ri-facebook-line"></i></a>
         <a href="https://www.linkedin.com/in/jokast-kassa-82a426221"><i class="ri-linkedin-box-fill"></i></a>
-        <a href="#"><i class="fab fa-behance-square"></i></a>
-        <a href="#"><i class="ri-instagram-line"></i></a>
+        <a href="https://github.com/Jokast38"><i class="ri-github-line"></i></a>
+        <a href="https://www.instagram.com/jokast38/"><i class="ri-instagram-line"></i></a>
       </div>
     </div>
   </footer>
   <!-- End Footer section  -->
-  <script src="./app.js"></script>
+  <script src="/app.js"></script>
+  <script src="/proscript.js"></script>
+
 </body>
 </html>
