--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
     <div class="footer-social-follow">
       <h1 class="footer-social-follow-heading">Suivez moi</h1>
       <div class="footer-social-icon">
-        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.facebook.com/jokast.kassa.5/"><i class="ri-facebook-line"></i></a>
         <a href="https://www.linkedin.com/in/jokast-kassa-82a426221"><i class="ri-linkedin-box-fill"></i></a>
         <a href="https://github.com/Jokast38"><i class="ri-github-line"></i></a>
-        <a href="#"><i class="ri-instagram-line"></i></a>
+        <a href="https://www.instagram.com/jokast38/"><i class="ri-instagram-line"></i></a>
       </div>
     </div>
   </footer>
