--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </div>
     </div>
   </section>
-  <!-- End About section  -->
+  <!-- End About section -->
 
-  <!-- Service Section  -->
+  <!-- Service Section -->
   <section id="services" class="services container">
     <div class="services-header">
       <h1 class="services-header-heading">Compétences</h1>
@@ -74,7 +74,19 @@
             <h1 class="service-front-heading">HTML et CSS</h1>
           </div>
           <div class="service-back">
-            <h1 class="service-back-heading">HTML <img src="./image/html5-fill.png" alt="HTML">& CSS <img src="../../image/css3-fill.png" alt=""></h1>
+            <h1 class="service-back-heading" style="text-align: center;">HTML <img src="./image/html5-fill.png" alt="HTML">& CSS <img src="./image/css3-fill.png" alt=""></h1>
+            <p class="service-back-desc">Front End Dev conception de site web</p>
+          </div>
+        </div>
+      </div>
+      <div class="service">
+        <div class="service-card">
+          <div class="service-front">
+            <i class="fa fa-palette"></i>
+            <h1 class="service-front-heading">JS</h1>
+          </div>
+          <div class="service-back">
+            <h1 class="service-back-heading">JS <img src="./image/javascript-fill.png" alt="JS"></h1>
             <p class="service-back-desc">Front End Dev conception de site web</p>
           </div>
         </div>
@@ -111,15 +123,15 @@
           </div>
           <div class="service-back">
             <h1 class="service-back-heading">Rapport</h1>
-            <p class="service-back-desc">Expérience en entreprise et projet en formation</p>
+            <p class="service-back-desc">Expérience en entreprise et Organisation en projet</p>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <!-- End Service Section  -->
+  <!-- End Service Section -->
 
-  <!-- Hire Section  -->
+  <!-- Hire Section -->
   <section id="hire" class="hire container">
     <h1 class="hire-heading">Tout est possible</h1>
     <a href="#" type="button" class="hire-button">MOI !!</a>
@@ -147,5 +159,5 @@
 
 </body>
   <script src="./app.js"></script>
-
+<script src="./proscript.js"></script>
 </html>
