--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <p class="hero-info-subheading">Développeur Web</p>
       <a href="#" type="button" class="hero-info-button">Portfolio</a>
     </div>
-    <div class="hero-img" style="height: 100%; width: 50%; ">
-      <img src="./image/BRYANT.jpg" style="height: 100%; width: 60%;" alt="Jokast Kassa" >
+    <div class="hero-img">
+      <img src="./image/BRYANT.jpg" style="width: 300px;" alt="Jokast Kassa" >
     </div>
   </section>
   <!-- End Hero Section  -->
