--- a/Projet.html
+++ b/Projet.html
@@ -72,17 +72,17 @@
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 4</h2>
-			<p>Converge</p>
+			<p>Box Vitrine(Formation)</p>
 		</a>
 	</li>
 	
   <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet 5" />
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/MeteoJK.png);" data-image-full="">
+			<img src="./image/MeteoJK.png" alt="Projet 5" />
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 5</h2>
-			<p>Converge</p>
+			<p>Projet Meteo(API Meteo)</p>
 		</a>
 	</li>
 
@@ -159,7 +159,7 @@
   </footer>
   <!-- End Footer section  -->
   <script src="./app.js"></script>
-  <script src="./proscript.js"></script>
+  <script src="../proscript.js"></script>
 
 </body>
  
