--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
   <section id="services" class="services container">
     <div class="services-header">
       <h1 class="services-header-heading">Compétences</h1>
-      <p class="services-header-desc">Mes différentes compétences sont les suivantes</p>
+      <p id="hero-name" class="services-header-desc"></p>
     </div>
     <div class="services-info">
       <div class="service">
         <div class="service-card">
           <div class="service-front">
             <i class="fa fa-palette"></i>
-            <h1 class="service-front-heading">HTML et CSS</h1>
+            <h1 class="service-front-heading">Front End</h1>
           </div>
           <div class="service-back">
+            <h1 class="service-back-heading">JS<img src="./image/javascript-fill.png" alt="JS">,</h1>
             <h1 class="service-back-heading" style="text-align: center;">HTML <img src="./image/html5-fill.png" alt="HTML">& CSS <img src="./image/css3-fill.png" alt=""></h1>
             <p class="service-back-desc">Front End Dev conception de site web</p>
           </div>
@@ -82,23 +83,11 @@
       <div class="service">
         <div class="service-card">
           <div class="service-front">
-            <i class="fa fa-palette"></i>
-            <h1 class="service-front-heading">JS</h1>
-          </div>
-          <div class="service-back">
-            <h1 class="service-back-heading">JS <img src="./image/javascript-fill.png" alt="JS"></h1>
-            <p class="service-back-desc">Front End Dev conception de site web</p>
-          </div>
-        </div>
-      </div>
-      <div class="service">
-        <div class="service-card">
-          <div class="service-front">
             <i class="fa fa-laptop-code"></i>
-            <h1 class="service-front-heading">PHP</h1>
+            <h1 class="service-front-heading">Back End</h1>
           </div>
           <div class="service-back">
-            <h1 class="service-back-heading">Front/Back End Dev</h1>
+            <h1 class="service-back-heading">PHP, MySql & Utilisation d'API </h1>
             <p class="service-back-desc">Projet dynamique avec gestion de BDD avec MySql</p>
           </div>
         </div>
