--- a/E4.html
+++ b/E4.html
@@ -82,8 +82,8 @@
     </div>
   </footer>
   <!-- End Footer section  -->
-  <script src="/app.js"></script>
-  <script src="/proscript.js"></script>
+  <script src="./app.js"></script>
+  <script src="./proscript.js"></script>
 
 </body>
 </html>
