--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section id="about" class="about container">
     <div class="about-info">
       <h1 class="about-info-heading">A PROPOS</h1>
-      <p class="about-info-desc">Je suis apprenti développeur web jeune, motivé, dynamique et rigoureux. Je suis actuellement à la recherche d'un contrat d'apprentissage. Je serai disponible immédiatement pour tout offre, il suffit de me contacter directement par mon numéro en bas de page ou par la rubrique contact de mon site. </p>
+      <p class="about-info-desc">Je suis jeune apprenti développeur web , motivé, dynamique et rigoureux. Je suis actuellement à la recherche d'un contrat d'apprentissage. Je serai disponible immédiatement pour tout offre, il suffit de me contacter directement par mon numéro en bas de page ou par la rubrique contact de mon site. </p>
       <a href="./image/CV/Kassa Jokast.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
     </div>
     <div class="about-img">
