--- a/Projet.html
+++ b/Projet.html
@@ -24,7 +24,7 @@
           <li><a href="index.html">A Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
-          <li><a href="../Articles/vi.html">Veille informatique</a></li>
+          <li><a href="../Articles/l'IA par JK.pdf">Veille informatique</a></li>
 		  <li><a href="../Articles/bts.html">BTS SIO</a></li>
           <li><a href="../Articles/contact.html">Me Contacter</a></li>
         </ul>
