--- a/Projet.html
+++ b/Projet.html
@@ -24,7 +24,7 @@
           <li><a href="index.html">A Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
-          <li><a href="../Articles/l'IA par JK.pdf">Veille informatique</a></li>
+          <li><a href="../Articles/vi.html">Veille informatique</a></li>
 		  <li><a href="../Articles/bts.html">BTS SIO</a></li>
           <li><a href="../Articles/contact.html">Me Contacter</a></li>
         </ul>
@@ -87,42 +87,42 @@
 	</li>
 
   <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet" />
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/GBprojet.png);" data-image-full="">
+			<img src="./image/GBprojet.png" alt="Projet" />
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 6</h2>
-			<p>Converge</p>
+			<p>Gestion Budget(PHP)</p>
 		</a>
 	</li>
 
   <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet" />
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/QCMprojet.png);" data-image-full="">
+			<img src="./image/QCMprojet.png" alt="Projet" />
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 7</h2>
-			<p>Converge</p>
+			<p>QCM</p>
 		</a>
 	</li>
 
   <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet" />
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/nana.png);" data-image-full="">
+			<img src="./image/nana.png" alt="Projet" />
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 8</h2>
-			<p>Converge</p>
+			<p>N.A.N.A site</p>
 		</a>
 	</li>
 
   <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet" />
+		<a class="card-image" href="" target="_blank" style="background-image: url(./image/onw.png);" data-image-full="">
+			<img src="./image/onw.png" alt="Projet" />
 		</a>
 		<a class="card-description" href="" target="_blank">
 			<h2>Réalisation 9</h2>
-			<p>Projet RJMG  Market</p>
+			<p>Projet En cours</p>
 		</a>
 	</li>
 </ul>
