--- a/E4.html
+++ b/E4.html
@@ -23,7 +23,7 @@
           <li><a href="index.html">A Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
-          <li><a href="../Articles/l'IA par JK.pdf">Veille informatique</a></li>
+          <li><a href="../Articles/vi.html">Veille informatique</a></li>
           <li><a href="../Articles/bts.html">BTS SIO</a></li>
           <li><a href="../Articles/contact.html">Me Contacter</a></li>
         </ul>
@@ -31,7 +31,11 @@
     </header>
   </section>
   <!-- End nav-bar  -->
+<h1 style="text-align: center;margin-top: 15px; "><strong>E4</strong></h1>
+<img style="width: 100%;" src="./Articles/Tableau E4 KASSA Jokast-1.png" alt="" srcset="">
 
+
+<h1 style="text-align: center;"><strong>E5 - Réalisation </strong></h1>
 
   <ul class="card-list">
 	
