--- a/CV.html
+++ b/CV.html
@@ -40,7 +40,7 @@
       <a href="#" type="button" class="hero-info-button">Portfolio</a>
     </div>
     <div class="hero-img">
-      <img src="./image/IMG_2353.PNG" alt="">
+      <img src="./image/BRYANT.jpg" alt="" style="width: 50%;">
     </div>
   </section>
   <!-- End Hero Section  -->
@@ -50,11 +50,11 @@
     <div class="about-info">
       <h1 class="about-info-heading">A PROPOS</h1>
       <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam, nostrum tempore quos corrupti rem.</p>
-      <a href="./image/CV/Kassa Jokast.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
+      <a href="./image/CV/Kassa Jokast Alternant.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
     </div>
     <div class="about-img">
       <div class="about-img-wrapper">
-        <img src="./images/img-2.jpg" alt="">
+        <img src="./image/images/img-2.jpg" alt="">
       </div>
     </div>
   </section>
@@ -62,7 +62,7 @@
 
   <!-- Service Section  -->
   <section id="services" class="services container">
-   <img src="./image/CV/Kassa Jokast.jpg" alt="">
+   <img src="./image/CV/Kassa Jokast Alternant.jpg" alt="">
   </section>
   <!-- End Service Section  -->
 
