--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="about-img">
       <div class="about-img-wrapper">
-        <img src="./image/images/img-3.jpg" alt="">
+        <img src="./image/images/jojo.JPG" alt="">
       </div>
     </div>
   </section>
