--- a/E4.html
+++ b/E4.html
@@ -20,7 +20,7 @@
           <div class="bar"></div>
         </div>
         <ul>
-          <li><a href="index.html">A Propos</a></li>
+          <li><a href="index.html">À Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
           <li><a href="../Articles/vi.html">Veille informatique</a></li>
