--- a/E5.html
+++ b/E5.html
@@ -19,7 +19,7 @@
           <div class="bar"></div>
         </div>
         <ul>
-          <li><a href="index.html">A Propos</a></li>
+          <li><a href="index.html">À Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
           <li><a href="../Articles/vi.html">Veille informatique</a></li>
@@ -47,7 +47,7 @@
   <!-- About section  -->
   <section id="about" class="about container">
     <div class="about-info">
-      <h1 class="about-info-heading">A PROPOS</h1>
+      <h1 class="about-info-heading">À PROPOS</h1>
       <p class="about-info-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi suscipit quidem ullam voluptates repellendus explicabo placeat, expedita ratione saepe eaque dolorum sed deleniti, odit numquam, nostrum tempore quos corrupti rem.</p>
       <a href="./image/CV/Kassa Jokast.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
     </div>
