--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="bar"></div>
         </div>
         <ul>
-          <li><a href="index.html">A Propos</a></li>
+          <li><a href="index.html">À Propos</a></li>
           <li><a href="Projet.html">Projets</a></li>
           <li><a href="E4.html">E4 et E5</a></li>
           <li><a href="./Articles/vi.html">Veille informatique</a></li>
@@ -48,8 +48,8 @@
   <!-- About section  -->
   <section id="about" class="about container">
     <div class="about-info">
-      <h1 class="about-info-heading">A PROPOS</h1>
-      <p class="about-info-desc">Je suis jeune apprenti développeur web , motivé, dynamique et rigoureux. Je suis actuellement à la recherche d'un contrat d'apprentissage. Je serai disponible immédiatement pour tout offre, il suffit de me contacter directement par mon numéro en bas de page ou par la rubrique contact de mon site. </p>
+      <h1 class="about-info-heading">À PROPOS</h1>
+      <p class="about-info-desc">Je suis un jeune apprenti développeur web , motivé, dynamique et rigoureux. Je suis actuellement à la recherche d'un contrat d'apprentissage. Je serai disponible immédiatement pour tout offre, il suffit de me contacter directement par mon numéro en bas de page ou par la rubrique contact de mon site. </p>
       <a href="./image/CV/Kassa Jokast Alternant.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
     </div>
     <div class="about-img">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-      <div class="service">
+      <div class="service"> 
         <div class="service-card">
           <div class="service-front">
             <i class="fa fa-laptop-code"></i>
@@ -135,7 +135,7 @@
       <p class="footer-contact-info">Mobile: +33 6 69 73 47 00</p>
     </div>
     <div class="footer-social-follow">
-      <h1 class="footer-social-follow-heading">Suivez moi</h1>
+      <h1 class="footer-social-follow-heading">Suivez-moi</h1>
       <div class="footer-social-icon">
         <a href="https://www.facebook.com/jokast.kassa.5/"><i class="ri-facebook-line"></i></a>
         <a href="https://www.linkedin.com/in/jokast-kassa-82a426221"><i class="ri-linkedin-box-fill"></i></a>
