--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="services" class="services container">
     <div class="services-header">
       <h1 class="services-header-heading">Compétences</h1>
-      <p id="hero-name" class="services-header-desc"></p>
+      <p id="hero-name" class="services-header-desc">Mes différentes compétences sont les suivantes :</p>
     </div>
     <div class="services-info">
       <div class="service">
