--- a/CV.html
+++ b/CV.html
@@ -62,7 +62,7 @@
 
   <!-- Service Section  -->
   <section id="services" class="services container">
-   <img src="./image/CV/Kassa Jokast Alternant.jpg" alt="">
+   <img src="./image/CV/KASSA-Jokast-alternance24 (1).png" alt="">
   </section>
   <!-- End Service Section  -->
 
