--- a/Projet.html
+++ b/Projet.html
@@ -1,176 +1,201 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio KASSA Jokast</title>
-  <link rel="icon" type="image/png" href="./image/favicon-32x32.png"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/projet.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Portfolio KASSA Jokast</title>
+	<link rel="icon" type="image/png" href="./image/favicon-32x32.png" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+		integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+	<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/projet.css">
 </head>
+
 <body>
-  <!-- nav-bar  -->
-  <section id="nav-bar" class="container">
-    <header class="nav-bar">
-      <div class="brand"><a href="index.html"><h1>Portfolio</h1></a></div>
-      <div class="nav-list">
-        <div class="hamburger">
-          <div class="bar"></div>
-        </div>
-        <ul>
-          <li><a href="index.html">À Propos</a></li>
-          <li><a href="Projet.html">Projets</a></li>
-          <li><a href="E4.html">E4 et E5</a></li>
-          <li><a href="../Articles/vi.html">Veille informatique</a></li>
-		  <li><a href="../Articles/bts.html">BTS SIO</a></li>
-          <li><a href="../Articles/contact.html">Me Contacter</a></li>
-        </ul>
-      </div>
-    </header>
-  </section>
-  <!-- End nav-bar  -->
- 
- <!-- Section  -->
- <ul class="card-list">
-	
-	<li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/Adminhotel.png);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet 1" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 1 E5</h2>
-			<p>Guest Hotel (Admin)</p>
-		</a>
-	</li>
-	
-	<li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/GestHotelpage.png);" data-image-full="">
-			<img src="./image/GestHotelpage.png" alt="Projet 2" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 2 E5</h2>
-			<p>Guest Hotel (Book) </p>
-		</a>
-	</li>
-	
-	<li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/RJMGsite.png);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet 3" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 3</h2>
-			<p>Projet RJMG  Market</p>
-		</a>
-	</li>
-	
-	<li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);" data-image-full="">
-			<img src="./image/Adminhotel.png" alt="Projet 4" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 4</h2>
-			<p>Box Vitrine(Formation)</p>
-		</a>
-	</li>
-	
-  <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/MeteoJK.png);" data-image-full="">
-			<img src="./image/MeteoJK.png" alt="Projet 5" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 5</h2>
-			<p>Projet Meteo(API Meteo)</p>
-		</a>
-	</li>
+	<!-- nav-bar  -->
+	<section id="nav-bar" class="container">
+		<header class="nav-bar">
+			<div class="brand"><a href="index.html">
+					<h1>Portfolio</h1>
+				</a></div>
+			<div class="nav-list">
+				<div class="hamburger">
+					<div class="bar"></div>
+				</div>
+				<ul>
+					<li><a href="index.html">À Propos</a></li>
+					<li><a href="Projet.html">Projets</a></li>
+					<li><a href="E4.html">E4 et E5</a></li>
+					<li><a href="../Articles/vi.html">Veille informatique</a></li>
+					<li><a href="../Articles/bts.html">BTS SIO</a></li>
+					<li><a href="../Articles/contact.html">Me Contacter</a></li>
+				</ul>
+			</div>
+		</header>
+	</section>
+	<!-- End nav-bar  -->
 
-  <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/GBprojet.png);" data-image-full="">
-			<img src="./image/GBprojet.png" alt="Projet" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 6</h2>
-			<p>Gestion Budget(PHP)</p>
-		</a>
-	</li>
+	<!-- Section  -->
+	<ul class="card-list">
 
-  <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/QCMprojet.png);" data-image-full="">
-			<img src="./image/QCMprojet.png" alt="Projet" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 7</h2>
-			<p>QCM</p>
-		</a>
-	</li>
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/Adminhotel.png);"
+				data-image-full="">
+				<img src="./image/Adminhotel.png" alt="Projet 1" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 1 E5</h2>
+				<p>Guest Hotel (Admin)</p>
+			</a>
+		</li>
 
-  <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/nana.png);" data-image-full="">
-			<img src="./image/nana.png" alt="Projet" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 8</h2>
-			<p>N.A.N.A site</p>
-		</a>
-	</li>
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/GestHotelpage.png);"
+				data-image-full="">
+				<img src="./image/GestHotelpage.png" alt="Projet 2" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 2 E5</h2>
+				<p>Guest Hotel (Book) </p>
+			</a>
+		</li>
 
-	<li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/JO_Social_Media.png);" data-image-full="">
-			<img src="./image/JO_Social_Media.png" alt="Projet" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 9</h2>
-			<p>Jo_Social_media</p>
-		</a>
-	</li>
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/RJMGsite.png);"
+				data-image-full="">
+				<img src="./image/Adminhotel.png" alt="Projet 3" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 3</h2>
+				<p>Projet RJMG Market</p>
+			</a>
+		</li>
 
-  <li class="card">
-		<a class="card-image" href="" target="_blank" style="background-image: url(./image/onw.png);" data-image-full="">
-			<img src="./image/onw.png" alt="Projet" />
-		</a>
-		<a class="card-description" href="" target="_blank">
-			<h2>Réalisation 10</h2>
-			<p>Projet En cours</p>
-		</a>
-	</li>
-</ul>
-  <!-- End Service Section  -->
- </section>
-  
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/BoxVitrine.jpg);"
+				data-image-full="">
+				<img src="./image/Adminhotel.png" alt="Projet 4" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 4</h2>
+				<p>Box Vitrine(Formation)</p>
+			</a>
+		</li>
 
-  <!-- Hire Section  -->
-  <section id="hire" class="hire container">
-    <h1 class="hire-heading">Tout est possible</h1>
-    <a href="#" type="button" class="hire-button">MOI !!</a>
-  </section>
-  <!-- End Hire Section  -->
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/MeteoJK.png);"
+				data-image-full="">
+				<img src="./image/MeteoJK.png" alt="Projet 5" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 5</h2>
+				<p>Projet Meteo(API Meteo)</p>
+			</a>
+		</li>
 
-  <!-- Footer section  -->
-  <footer id="footer" class="footer container">
-    <div class="footer-contact">
-      <h1 class="footer-contact-heading">Contact With Me</h1>
-      <p class="footer-contact-info">  Email:<a href="mailto:jokast38@gmail.com">Jokast38@gamil.com</a></p>
-      <p class="footer-contact-info">Mobile: +33 6 69 73 47 00</p>
-    </div>
-    <div class="footer-social-follow">
-      <h1 class="footer-social-follow-heading">Follow Me</h1>
-      <div class="footer-social-follow">
-		<h1 class="footer-social-follow-heading">Suivez moi</h1>
-		<div class="footer-social-icon">
-			<a href="https://www.facebook.com/jokast.kassa.5/"><i class="ri-facebook-line"></i></a>
-			<a href="https://www.linkedin.com/in/jokast-kassa-82a426221"><i class="ri-linkedin-box-fill"></i></a>
-			<a href="https://github.com/Jokast38"><i class="ri-github-line"></i></a>
-			<a href="https://www.instagram.com/jokast38/"><i class="ri-instagram-line"></i></a>
-		  </div>
-	  </div>
-	</div>
-  </footer>
-  <!-- End Footer section  -->
-  <script src="./app.js"></script>
-  <script src="../proscript.js"></script>
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/GBprojet.png);"
+				data-image-full="">
+				<img src="./image/GBprojet.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 6</h2>
+				<p>Gestion Budget(PHP)</p>
+			</a>
+		</li>
+
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/QCMprojet.png);"
+				data-image-full="">
+				<img src="./image/QCMprojet.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 7</h2>
+				<p>QCM</p>
+			</a>
+		</li>
+
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/nana.png);"
+				data-image-full="">
+				<img src="./image/nana.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 8</h2>
+				<p>N.A.N.A site</p>
+			</a>
+		</li>
+
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/JO_Social_Media.png);"
+				data-image-full="">
+				<img src="./image/JO_Social_Media.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 9</h2>
+				<p>Jo_Social_media</p>
+			</a>
+		</li>
+
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/onw.png);"
+				data-image-full="">
+				<img src="./image/vetolib.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 10</h2>
+				<p>Vetolib</p>
+			</a>
+		</li>
+		<li class="card">
+			<a class="card-image" href="" target="_blank" style="background-image: url(./image/onw.png);"
+				data-image-full="">
+				<img src="./image/onw.png" alt="Projet" />
+			</a>
+			<a class="card-description" href="" target="_blank">
+				<h2>Réalisation 11</h2>
+				<p>Projet En cours</p>
+			</a>
+		</li>
+	</ul>
+	<!-- End Service Section  -->
+	</section>
+
+
+	<!-- Hire Section  -->
+	<section id="hire" class="hire container">
+		<h1 class="hire-heading">Tout est possible</h1>
+		<a href="#" type="button" class="hire-button">MOI !!</a>
+	</section>
+	<!-- End Hire Section  -->
+
+	<!-- Footer section  -->
+	<footer id="footer" class="footer container">
+		<div class="footer-contact">
+			<h1 class="footer-contact-heading">Contact With Me</h1>
+			<p class="footer-contact-info"> Email:<a href="mailto:jokast38@gmail.com">Jokast38@gamil.com</a></p>
+			<p class="footer-contact-info">Mobile: +33 6 69 73 47 00</p>
+		</div>
+		<div class="footer-social-follow">
+			<h1 class="footer-social-follow-heading">Follow Me</h1>
+			<div class="footer-social-follow">
+				<h1 class="footer-social-follow-heading">Suivez moi</h1>
+				<div class="footer-social-icon">
+					<a href="https://www.facebook.com/jokast.kassa.5/"><i class="ri-facebook-line"></i></a>
+					<a href="https://www.linkedin.com/in/jokast-kassa-82a426221"><i
+							class="ri-linkedin-box-fill"></i></a>
+					<a href="https://github.com/Jokast38"><i class="ri-github-line"></i></a>
+					<a href="https://www.instagram.com/jokast38/"><i class="ri-instagram-line"></i></a>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- End Footer section  -->
+	<script src="./app.js"></script>
+	<script src="../proscript.js"></script>
 
 </body>
- 
+
 </html>
