--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="about-info">
       <h1 class="about-info-heading">À PROPOS</h1>
       <p class="about-info-desc">Je suis un jeune apprenti développeur web , motivé, dynamique et rigoureux. Je suis actuellement à la recherche d'un contrat d'apprentissage. Je serai disponible immédiatement pour tout offre, il suffit de me contacter directement par mon numéro en bas de page ou par la rubrique contact de mon site. </p>
-      <a href="./image/CV/Kassa Jokast Alternant.jpg" type="button" class="about-info-button">Télécharger mon CV</a>
+      <a href="./image/CV/KASSA-Jokast-alternance24 (1).png" type="button" class="about-info-button">Télécharger mon CV</a>
     </div>
     <div class="about-img">
       <div class="about-img-wrapper">
